*stlink-9999 (17 Nov 2015)

  17 Nov 2015; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +metadata.xml, +stlink-9999.ebuild:
  dev-embedded/stlink: new ebuild