@@ -1,0 +1,23 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+DIST stlink-1.2.0.tar.gz 211710 SHA256 acfdd52e350a61c14910f3c14b9ed232a79febcf35b38479b011d5cd2d4af688 SHA512 8c27895b9d93d8ac94af944eceaefa19b9b7d4b8cf1c2d0a53cb13dbbbbb0c6112fe68a2f41b326a86c8e9d2edc17ccf69f6e48bd9cc31f9aebefab601bdef5f WHIRLPOOL f0e7a478819a530e26f9a9b4f2275ed5b573f4b4fc9f6bd88fafb1eb44d08cc8f812f46e0a13bed611cfd0c5a38ec7cfa210f5e2ebfc25a829f53b236bd3add2
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iQJ8BAEBCABmBQJXMMM6XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ0NEM5MDM0MjM5MkNDRUI1NUFEQjYyMTIy
+RjA0RTMxRjA3MjAxRTdEAAoJEC8E4x8HIB5938MQAM81uW76jlraRLYQtbsP7z7p
+tUKi1VW2x9vXY/0EnS8iMCaFfTT+jOUnXPpBJrYRgh78xLnFfro5zCrX3S0UzH9+
+86pRVOBG5Y1mxUl1kHdyzrVYP3lQL+hfxiDm99hMpR5HLL6v5KFUC1aS7168zEhp
+DPDB7J0U2OTNzgswiptAc6jM0Vj+U/PiTJsnimj1fsWYcX3RAocJFHFcD0+NwVof
+hYU4EjXGnEs2plj8jl3afCUY6P5PXV2vNuBrPEFQmnJCkaq/ZgRLyQw8JOdchUie
+5aaQiFnqyX2BwE9TTYbT4eaOhFCVEHIywdaudp2bXJQOC93dgXVuLiXfENjo7xme
+cudKBbciJoEYZB6pD8Zy+hAdXhDeuzqXXJUMk2SmhcgXKmDDQlOdTj7pzJJ9vBxk
+Sncq6PXejRp8HYt52N4JTu0RFBrHMMpLJb0QmLc8VEZKxUFi9dV2zQDKzC/MNe79
+wcjtJe0vB2I8ATO4pulnXEa99uQs4j8mtqPgbO5JWQ9LCPlyy3O6irk6jUnjvPYd
+d0QQFGkux9sMCuAaXJC8EaKqO9G8sr3aGWgt9zpVxu84ZGWuHIvPOVrjBHIXdz3k
+crBTrkEwF80nnjnZyaiJ1dWRgI6SWLz3L2eNhOI0zhCAscsoWod/NHuBUwszZ596
+sKYn2Vd+Kh0D4WKv02KK
+=IJEd
+-----END PGP SIGNATURE-----
